<package format="2">
	<name>odom_tf_calibrator</name>
	<version>0.0.1</version>
	<description>Calibrates the 2D (3 DOF) transformation between a reference odometry and one or more odometry sources.</description>
	<maintainer email="JDichtl@lincoln.ac.uk">Johann Dichtl</maintainer>

	<url>none yet</url>
	<author>Johann Dichtl</author>

	<license>LGPLv3</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>rospy</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>csm</depend>
	
	<exec_depend>message_runtime</exec_depend>
	<!--
	<build_depend>csm</build_depend>
	<build_depend>libpcl-all-dev</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	
	<build_depend>nav_msgs</build_depend>
	<build_depend>nodelet</build_depend>
	<build_depend>message_generation</build_depend>


	<exec_depend>csm</exec_depend>
	<exec_depend>libpcl-all</exec_depend>
	<exec_depend>pcl_ros</exec_depend>
	<exec_depend>pcl_conversions</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>tf</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>message_generation</exec_depend>
	
	<exec_depend>message_runtime</exec_depend>
	
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>nodelet</exec_depend>
	
	<export>
		<nodelet plugin="${prefix}/laser_scan_matcher_nodelet.xml" />
	</export>
	-->

</package>
